BinaryOptionsToolsUni/out/swift/binary_options_tools_uniFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
uint64_t uniffi_binary_options_tools_uni_fn_constructor_pocketoption_init(RustBuffer ssid
);
uint64_t uniffi_binary_options_tools_uni_fn_constructor_pocketoption_new(RustBuffer ssid
);
uint64_t uniffi_binary_options_tools_uni_fn_constructor_pocketoption_new_with_url(RustBuffer ssid, RustBuffer url
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_assets(uint64_t ptr
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_balance(uint64_t ptr
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_buy(uint64_t ptr, RustBuffer asset, uint32_t time, double amount
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_clear_closed_deals(uint64_t ptr
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_create_raw_handler(uint64_t ptr, uint64_t validator, RustBuffer keep_alive
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_get_candles(uint64_t ptr, RustBuffer asset, int64_t period, int64_t offset
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_get_candles_advanced(uint64_t ptr, RustBuffer asset, int64_t period, int64_t time, int64_t offset
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_get_closed_deals(uint64_t ptr
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_get_opened_deals(uint64_t ptr
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_history(uint64_t ptr, RustBuffer asset, uint32_t period
);
int8_t uniffi_binary_options_tools_uni_fn_method_pocketoption_is_demo(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_payout(uint64_t ptr, RustBuffer asset
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_reconnect(uint64_t ptr
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_result(uint64_t ptr, RustBuffer id
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_result_with_timeout(uint64_t ptr, RustBuffer id, uint64_t timeout_secs
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_sell(uint64_t ptr, RustBuffer asset, uint32_t time, double amount
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_server_time(uint64_t ptr
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_shutdown(uint64_t ptr
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_subscribe(uint64_t ptr, RustBuffer asset, uint64_t duration_secs
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_trade(uint64_t ptr, RustBuffer asset, RustBuffer action, uint32_t time, double amount
);
uint64_t uniffi_binary_options_tools_uni_fn_method_pocketoption_unsubscribe(uint64_t ptr, RustBuffer asset
);
void uniffi_binary_options_tools_uni_fn_free_rawhandler(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_binary_options_tools_uni_fn_method_rawhandler_send_and_wait(uint64_t ptr, RustBuffer message
);
uint64_t uniffi_binary_options_tools_uni_fn_method_rawhandler_send_binary(uint64_t ptr, RustBuffer data
);
uint64_t uniffi_binary_options_tools_uni_fn_method_rawhandler_send_text(uint64_t ptr, RustBuffer message
);
uint64_t uniffi_binary_options_tools_uni_fn_method_rawhandler_wait_next(uint64_t ptr
);
uint64_t uniffi_binary_options_tools_uni_fn_clone_subscriptionstream(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_binary_options_tools_uni_fn_free_subscriptionstream(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_binary_options_tools_uni_fn_method_subscriptionstream_next(uint64_t ptr
);
uint64_t uniffi_binary_options_tools_uni_fn_clone_validator(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_binary_options_tools_uni_fn_free_validator(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_binary_options_tools_uni_fn_constructor_validator_all(RustBuffer validators, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_binary_options_tools_uni_fn_constructor_validator_any(RustBuffer validators, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_binary_options_tools_uni_fn_constructor_validator_contains(RustBuffer substring, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_binary_options_tools_uni_fn_constructor_validator_ends_with(RustBuffer suffix, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_binary_options_tools_uni_fn_constructor_validator_ne(uint64_t validator, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_binary_options_tools_uni_fn_constructor_validator_new(RustCallStatus *_Nonnull out_status
    
);
uint64_t uniffi_binary_options_tools_uni_fn_constructor_validator_regex(RustBuffer pattern, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_binary_options_tools_uni_fn_constructor_validator_starts_with(RustBuffer prefix, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_binary_options_tools_uni_fn_method_validator_check(uint64_t ptr, RustBuffer message, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_assets(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_balance(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_buy(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_clear_closed_deals(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_constructor_pocketoption_init(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_constructor_pocketoption_new(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_constructor_pocketoption_new_with_url(void
    
);
uint32_t ffi_binary_options_tools_uni_uniffi_contract_version(void
    
);