BinaryOptionsToolsUni/out/python/binary_options_tools_uni.py

_UniffiLib.uniffi_binary_options_tools_uni_fn_free_rawhandler.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_free_rawhandler.restype = None
_UniffiLib.uniffi_binary_options_tools_uni_fn_clone_subscriptionstream.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_clone_subscriptionstream.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_free_subscriptionstream.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_free_subscriptionstream.restype = None
_UniffiLib.uniffi_binary_options_tools_uni_fn_clone_validator.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_clone_validator.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_free_validator.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_free_validator.restype = None
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_pocketoption_init.argtypes = (
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_pocketoption_init.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_pocketoption_new.argtypes = (
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_pocketoption_new.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_pocketoption_new_with_url.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_pocketoption_new_with_url.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_assets.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_assets.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_balance.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_balance.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_buy.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.c_uint32,
    ctypes.c_double,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_buy.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_clear_closed_deals.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_clear_closed_deals.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_create_raw_handler.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_create_raw_handler.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_get_candles.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.c_int64,
    ctypes.c_int64,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_get_candles.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_get_candles_advanced.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.c_int64,
    ctypes.c_int64,
    ctypes.c_int64,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_get_candles_advanced.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_get_closed_deals.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_get_closed_deals.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_get_opened_deals.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_get_opened_deals.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_history.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.c_uint32,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_history.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_is_demo.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_is_demo.restype = ctypes.c_int8
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_payout.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_payout.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_reconnect.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_reconnect.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_result.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_result.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_result_with_timeout.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.c_uint64,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_result_with_timeout.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_sell.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.c_uint32,
    ctypes.c_double,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_sell.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_server_time.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_server_time.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_shutdown.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_shutdown.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_subscribe.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.c_uint64,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_subscribe.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_trade.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.c_uint32,
    ctypes.c_double,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_trade.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_unsubscribe.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_pocketoption_unsubscribe.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_rawhandler_send_and_wait.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_rawhandler_send_and_wait.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_rawhandler_send_binary.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_rawhandler_send_binary.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_rawhandler_send_text.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_rawhandler_send_text.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_rawhandler_wait_next.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_rawhandler_wait_next.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_subscriptionstream_next.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_subscriptionstream_next.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_all.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_all.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_any.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_any.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_contains.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_contains.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_ends_with.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_ends_with.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_ne.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_ne.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_new.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_new.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_regex.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_regex.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_starts_with.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_constructor_validator_starts_with.restype = ctypes.c_uint64
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_validator_check.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_binary_options_tools_uni_fn_method_validator_check.restype = ctypes.c_int8
_UniffiLib.ffi_binary_options_tools_uni_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_binary_options_tools_uni_uniffi_contract_version.restype = ctypes.c_uint32
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_pocketoption_init.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_pocketoption_init.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_pocketoption_new.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_pocketoption_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_pocketoption_new_with_url.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_pocketoption_new_with_url.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_assets.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_assets.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_balance.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_balance.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_buy.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_buy.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_clear_closed_deals.argtypes = (
)
